--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
-  nqueenspuzzle:
+  puzzle:
     build: .
     depends_on:
-      -  nqueenspuzzledb
-  nqueenspuzzledb:
+      -  puzzledb
+  puzzledb:
     image: postgres
     restart: always
     ports:
@@ -13,4 +13,6 @@ services:
       - POSTGRES_USER=nQueensPuzzle
       - POSTGRES_PASSWORD=nQueensPuzzle
       - POSTGRES_DB=nQueensPuzzle
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
